include $(top_srcdir)/dirs.mk
SUBDIRS = po src

dist_obj_DATA = \
    models/triangle_tile.obj \
    models/square_tile.obj \
    models/octogon_tile.obj \
    models/hexa_tile.obj \
    models/cube.obj \
    models/penguin.obj

dist_tex_DATA = \
    textures/penguin_black.jpg

ACLOCAL_AMFLAGS = -I m4
